--- a/roles/argocd-deploy/defaults/main.yml
+++ b/roles/argocd-deploy/defaults/main.yml
@@ -1,42 +1,5 @@
 ---
-durianlab_frontend_release_name: durianlab-frontend
-durianlab_frontend_namespace: default
-durianlab_frontend_chart_repo: https://github.com/DurianLAB/homepage.git
-durianlab_frontend_chart_path: helm-chart
-durianlab_frontend_chart_version: 0.2.0
-durianlab_frontend_helm_values:
-  replicaCount: 1
-  image:
-    repository: phamduchongan93/durianlab-consulting
-    pullPolicy: IfNotPresent
-    tag: "main"
-  imagePullSecrets: []
-  nameOverride: ""
-  fullnameOverride: ""
-  service:
-    type: ClusterIP
-    port: 80
-  ingress:
-    enabled: true
-    className: "nginx"
-    annotations: {}
-    hosts:
-      - host: durianlab.tech
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - hosts:
-          - durianlab.tech
-        secretName: durianlab.tech-tls
-  resources: {}
-  autoscaling:
-    enabled: false
-    minReplicas: 1
-    maxReplicas: 100
-    targetCPUUtilizationPercentage: 80
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
-  certManager:
-    issuerName: "letsencrypt-prod"
+argocd_release_name: argocd
+argocd_namespace: argocd
+argocd_chart_version: 5.51.0
+# argocd_helm_values: {}
