--- a/inventory.yml
+++ b/inventory.yml
@@ -1,2 +1,2 @@
 [lxc_dev_cluster]
-k3s-dev-cluster-01 ansible_host=10.150.22.94 ansible_ssh_private_key_file=~/.ssh/id_ed25519 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+k3s-dev-cluster-01 ansible_host=10.150.22.94 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/id_ed25519 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
