move microk8s playbook to role based

--- a/playbook-microk8s.yml
+++ b/playbook-microk8s.yml
@@ -2,58 +2,5 @@
 - name: Install MicroK8s
   hosts: all
   become: true
-  vars:
-    microk8s_channel: stable # You can specify 'latest', '1.28', etc.
-
-  tasks:
-    - name: Update apt cache
-      apt:
-        update_cache: yes
-        cache_valid_time: 3600
-      when: ansible_os_family == "Debian"
-
-    - name: Install required dependencies (Debian/Ubuntu)
-      apt:
-        name:
-          - snapd
-        state: present
-      when: ansible_os_family == "Debian"
-
-    - name: Ensure snapd is running and enabled (Debian/Ubuntu)
-      systemd:
-        name: snapd.service
-        state: started
-        enabled: yes
-      when: ansible_os_family == "Debian"
-
-    - name: Install MicroK8s via snap
-      snap:
-        name: microk8s
-        classic: yes
-        channel: "{{ microk8s_channel }}"
-        state: present
-
-    - name: Add user to microk8s group (for non-root access)
-      user:
-        name: "{{ ansible_user_id }}"
-        groups: microk8s
-        append: yes
-      when: ansible_os_family == "Debian"
-
-    - name: Ensure group membership is applied (may require logout/login or new shell)
-      command: newgrp microk8s
-      become: false
-      when: ansible_os_family == "Debian"
-
-    - name: Enable MicroK8s addons (optional - adjust as needed)
-      command: microk8s enable dns storage dashboard
-      become: true
-
-    - name: Get kubeconfig (for remote access)
-      command: microk8s config
-      become: true
-      register: kubeconfig_output
-
-    - name: Display kubeconfig 
-      debug:
-        var: kubeconfig_output.stdout
+  roles:
+    - microk8s
