--- a/roles/nginx-ingress-helm/meta/main.yml
+++ b/roles/nginx-ingress-helm/meta/main.yml
@@ -1,21 +1,16 @@
 galaxy_info:
-  author: your_name
+  author: An Pham
   description: Deploy NGINX Ingress Controller via Helm
-  company: your_company
-
+  company: durianLAB.tech
   license: MIT
-
   min_ansible_version: "2.9"
-
   platforms:
     - name: GenericLinux
       versions:
         - all
-
   galaxy_tags:
     - kubernetes
     - helm
     - ingress
     - nginx
-
 dependencies: []
