--- a/roles/helm-install/meta/main.yml
+++ b/roles/helm-install/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
-  description: Install Helm CLI
-  company: your company (optional)
+  author: An Pham
+  description: Install Helm CLI on Ubuntu systems
+  company: durianLAB.tech
   license: GPL-2.0-or-later
   min_ansible_version: 2.1
   platforms:
@@ -12,4 +12,5 @@ galaxy_info:
     - jammy
   galaxy_tags:
   - helm
+  - kubernetes
 dependencies: []
