--- a/roles/portforward_lxc/meta/main.yml
+++ b/roles/portforward_lxc/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: An Pham
-  description: Clear syslog files on Linux systems
+  description: Configure port forwarding for LXC containers
   company: durianLAB.tech
   license: MIT
   min_ansible_version: 2.9
@@ -9,7 +9,8 @@ galaxy_info:
       versions:
         - all
   galaxy_tags:
-    - syslog
-    - logging
-    - maintenance
+    - lxc
+    - portforward
+    - networking
+    - iptables
 dependencies: []
