--- a/playbook-trivy.yml
+++ b/playbook-trivy.yml
@@ -1,8 +1,11 @@
 ---
-- name: Install Trivy
+- name: Install Trivy Operator
   hosts: all
   remote_user: ansible
   tasks:
+    - name: Include helm-install role
+      ansible.builtin.include_role:
+        name: helm-install
     - name: Include trivy-install role
       ansible.builtin.include_role:
         name: trivy-install
